--- a/style.css
+++ b/style.css
@@ -139,10 +139,9 @@ nav a{
      font-weight: bold;
  }
 
-
- .cloetext h1{
+ .cloe h1{
      font-weight: bold;
-     font-size: 50px;
+     font-size: 40px;
      line-height: 56px;
      text-align: right;
      margin-top: 48px;
@@ -181,13 +180,65 @@ nav a{
     line-height: 22px;
 }
 
+.pelican{
+    position: relative;
+    display: flex;
+    margin-bottom: 29px;
+}
 
+.pelicanpicture img{
+    width: 960px;
+    height: 542px;
+}
 
+.pelicantext{
+    text-align: left;
+    margin-left: 38px;
+}
 
+.pelicantext h1{
+    margin-top: 85px;
+    font-weight: bold;
+    font-size: 40px;
+    line-height: 56px;
+    margin-bottom: -8px;
+}
 
+.pelicantext h1, .pelicantext a{
+    font-family: 'Roboto', sans-serif;
+    color: #000000;
+    font-weight: bold;
+}
 
+.shelves{
+    font-style: italic;
+    font-size: 18px;
+    line-height: 37px;
+    color: #000000;
+}
 
+.from1{
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 28px;
+    color: #000000;
+}
 
+.store, .sizes{
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 31px;
+    color: #525252;
+    font-family: 'Cardo', serif;
+    margin-bottom: 60px;
+}
+.sizes{
+    margin-top: -42px;
+}
+.pelican a{
+    font-size: 17px;
+    line-height: 22px;
+}
 
 
 
